adaptive all pages

--- a/app/product-one.html
+++ b/app/product-one.html
@@ -223,7 +223,7 @@
 				</div>
 			</div>
 
-			<!-- ////////////product-one__page///////////// -->
+			<!-- ////////////product-one///////////// -->
 			<section class="product-one">
 				<div class="container">
 					<div class="product-one__inner">
@@ -309,7 +309,7 @@
 									</div>
 								</div>
 							</div>
-						<!-- **********end tabs********* -->		
+							<!-- **********end tabs********* -->
 
 							<div class="product-one__more">
 								<div class="product-one__more-title">More Product by PsdBosS</div>
@@ -369,62 +369,67 @@
 						</div>
 
 						<div class="product-one__aside">
-							<div class="aside__item product__price">
-								<div class="aside__title">Product Price </div>
-								<div class="price__box">
-									<span class="product__price">$59.00</span>
-									<form>
-										<select name="">
-											<option>regular</option>
-											<option>premium</option>
-										</select>
-									</form>
-								</div>
-								<button class="icon-shopping-cart">Add To Cart</button>
-								<button class="icon-heart-o">Add To Favourites</button>
-								<button class="buy">Buy Now</button>
-							</div>
-
-							<div class="category aside__item">
-								<div class="aside__title">Product Author</div>
-								<div class="product-author__box">
-									<div class="author__avatar">
-										<img src="images/content/avatar.jpg" alt="">
+							<div class="aside__product-users">
+								<div class="aside__item product__price">
+									<div class="aside__title">Product Price </div>
+									<div class="price__box">
+										<span class="product__price">$59.00</span>
+										<form>
+											<select name="">
+												<option>regular</option>
+												<option>premium</option>
+											</select>
+										</form>
 									</div>
-									<div class="author__info">
-										<span class="author__name">PsdBoss</span>
-										<a href="#!" class="author__btn">View Profile</a>
-									</div>
-								</div>
-								<ul class="author__awards-list">
-									<li class="icon-meh-o"></li>
-									<li class="icon-pagelines"></li>
-									<li class="icon-foursquare"></li>
-									<li class="icon-flash"></li>
-									<li class="icon-yen"></li>
-								</ul>
-							</div>
-
-
-							<div class="category aside__item sales-counter">
-								<div class="aside__item-sales">
-									<span>05</span>Sales</div>
-							</div>
-
-							<div class="category aside__item">
-								<div class="aside__title">Product Information</div>
-								<div class="info__line-box">
-									<div class="info__line">Released On: <span>1 January, 2016</span></div>
-									<div class="info__line">Last Update: <span>20 April, 2016</span></div>
-									<div class="info__line">Download: <span>613</span></div>
-									<div class="info__line">Version: <span>1.1</span></div>
-									<div class="info__line">Compatibility: <span>Wordpress 4+</span></div>
-									<div class="info__line">Compatible Browsers: <span class="browser"><br>IE9, IE10, IE11, Firefox, Safari,
-											Opera, Chrome</span>
-									</div>
+									<button class="icon-shopping-cart">Add To Cart</button>
+									<button class="icon-heart-o">Add To Favourites</button>
+									<button class="buy">Buy Now</button>
 								</div>
 
+								<div class="category aside__item">
+									<div class="aside__title">Product Author</div>
+									<div class="product-author__box">
+										<div class="author__avatar">
+											<img src="images/content/avatar.jpg" alt="">
+										</div>
+										<div class="author__info">
+											<span class="author__name">PsdBoss</span>
+											<a href="#!" class="author__btn">View Profile</a>
+										</div>
+									</div>
+									<ul class="author__awards-list">
+										<li class="icon-meh-o"></li>
+										<li class="icon-pagelines"></li>
+										<li class="icon-foursquare"></li>
+										<li class="icon-flash"></li>
+										<li class="icon-yen"></li>
+									</ul>
+								</div>
 							</div>
+
+							<div class="aside__product-info">
+								<div class="category aside__item sales-counter">
+									<div class="aside__item-sales">
+										<span>05</span>Sales</div>
+								</div>
+								<div class="category aside__item">
+									<div class="aside__title">Product Information</div>
+									<div class="info__line-box">
+										<div class="info__line">Released On: <span>1 January, 2016</span></div>
+										<div class="info__line">Last Update: <span>20 April, 2016</span></div>
+										<div class="info__line">Download: <span>613</span></div>
+										<div class="info__line">Version: <span>1.1</span></div>
+										<div class="info__line">Compatibility: <span>Wordpress 4+</span></div>
+										<div class="info__line">Compatible Browsers: <span class="browser"><br>IE9, IE10, IE11, Firefox,
+												Safari,
+												Opera, Chrome</span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+
+
 
 
 
