--- a/app/profile.html
+++ b/app/profile.html
@@ -192,7 +192,7 @@
 				</div>
 			</header>
 			<!-- //////////search//////// -->
-			<section class="prifile" style="background-image: url(images/srh_bg.jpg);">
+			<section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
 				<div class="container">
 					<div class="search__inner ">
 						<div class="search__inner-text">Premium WordPress Themes, Web Templates and Many More ...</div>
@@ -209,19 +209,21 @@
 					</div>
 				</div>
 			</section>
-			<!-- ////////////profile__page///////////// -->
-			<section class="profile">
-				<!-- ////////////breadcrumbs///////////// -->
-				<div class="breadcrumbs">
-					<div class="container">
-						<div class="breadcrumbs__inner">
-							<ul class="breadcrumbs__list">
-								<li><a href="#!">Home</a></li>
-								<li><span>Contact US</span></li>
-							</ul>
-						</div>
+
+			<!-- ////////////breadcrumbs///////////// -->
+			<div class="breadcrumbs">
+				<div class="container">
+					<div class="breadcrumbs__inner">
+						<ul class="breadcrumbs__list">
+							<li><a href="#!">Home</a></li>
+							<li><span>Contact US</span></li>
+						</ul>
 					</div>
 				</div>
+			</div>
+
+			<!-- ////////////profile///////////// -->
+			<section class="profile">
 				<div class="container">
 					<div class="profile__inner">
 						<div class="profile__aside">
@@ -288,138 +290,319 @@
 									</div>
 								</div>
 							</div>
-
-						</div>
-
-					</div>
-					<!-- ////////////personal-box///////////// -->
-					<div class="personal__box">
-						<div class="personal__box-title">About Me: </div>
-						<div class="personal__box-text">
-							<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-								standard
-								dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-								make a
-								type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
-						</div>
-						<div class="personal__box-skills">
-							<div class="personal__box-title">Skills: </div>
-							<div class="skills__item">
-								<div class="skills__item-head">
-									<div class="skills__item-type">Graphic Design </div>
-									<div class="skills__item-procent">80%</div>
-								</div>
-								<div class="skills__item-line">
-									<span style="max-width: 80%"></span>
-								</div>
-							</div>
-							<div class="skills__item">
-								<div class="skills__item-head">
-									<div class="skills__item-type">WordPress</div>
-									<div class="skills__item-procent">90%</div>
-								</div>
-								<div class="skills__item-line">
-									<span style="max-width: 90%"></span>
-								</div>
-							</div>
-
-							<div class="skills__item">
-								<div class="skills__item-head">
-									<div class="skills__item-type">Joomla</div>
-									<div class="skills__item-procent">70%</div>
-								</div>
-								<div class="skills__item-line">
-									<span style="max-width: 70%"></span>
-								</div>
-							</div>
-
 						</div>
 					</div>
 				</div>
-
 		</div>
-
 		</section>
-		<!-- ////////////profile-settings///////////// -->
 		<div class="settings profile-settings">
-			<!-- ////////////tab-content///////////// -->
-			<div class="tab__content">
-			</div>
+			<div class="container">
+				<div class="product-one__tabs settings__tabs">
+					<div class="tabs">
+						<span class="tab active icon-user" data-id="1">About Me</span>
+						<span class="tab icon-briefcase" data-id="2">Products (10)</span>
+						<span class="tab icon-envelope-o" data-id="3">Message box</span>
+						<span class="tab icon-comments-o" data-id="4">Customer Reviews (20)</span>
+						<span class="tab icon-users" data-id="5">Followers (100)</span>
+					</div>
 
+					<div class="tab_content">
+						<div class="tab-item active-tab" id="1">
+							<div class="personal__box">
+								<div class="personal__box-title">About Me: </div>
+								<div class="personal__box-text">
+									<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+										standard
+										dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+										make a
+										type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+								</div>
+								<div class="personal__box-skills">
+									<div class="personal__box-title">Skills: </div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Graphic Design </div>
+											<div class="skills__item-procent">80%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 80%"></span>
+										</div>
+									</div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">WordPress</div>
+											<div class="skills__item-procent">90%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 90%"></span>
+										</div>
+									</div>
 
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Joomla</div>
+											<div class="skills__item-procent">70%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 70%"></span>
+										</div>
+									</div>
 
-
-
-
-
-
-
-
-		</div>
-		<!-- //////////footer//////// -->
-		<footer class="footer">
-			<div class="footer__content">
-				<div class="container">
-					<div class="footer__inner">
-						<div class="footer__col">
-							<div class="footer__col-title">About Company</div>
-							<div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
-								disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
-							<div class="footer__info">PO Box 16122 Collins Street West
-								Victoria 8007 Australia</div>
-							<a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
-						</div>
-
-						<div class="footer__col footer__col-menu">
-							<div class="footer__col-title">Join Our Community</div>
-							<ul class="footer__col-list">
-								<li><a href="#!">Home</a></li>
-								<li><a href="#!">Forums</a></li>
-								<li><a href="#!">Become an Author</a></li>
-								<li><a href="#!">Community Meetups</a></li>
-								<li><a href="#!">Become an Affiliate</a></li>
-							</ul>
-						</div>
-
-						<div class="footer__col footer__col-menu">
-							<div class="footer__col-title">Need Help?</div>
-							<ul class="footer__col-list">
-								<li><a href="#!">Help Center</a></li>
-								<li><a href="#!">Foxtar Market Terms</a></li>
-								<li><a href="#!">Author Terms</a></li>
-								<li><a href="#!">Foxtar Licenses</a></li>
-								<li><a href="#!">Contact Us</a></li>
-							</ul>
-						</div>
-
-						<div class="footer__col">
-							<div class="footer__col-title">Follow Us On</div>
-							<ul class="footer__social-link">
-								<li><a class="link-fb" href="#!"></a></li>
-								<li><a class="link-tw" href="#!"></a></li>
-								<li><a class="link-yt" href="#!"></a></li>
-								<li><a class="link-pin" href="#!"></a></li>
-								<li><a class="link-lin" href="#!"></a></li>
-							</ul>
-							<div class="footer__form">
-								<div class="footer__form-title">Newsletter Sign Up!</div>
-								<form action="">
-									<input type="text" placeholder="E-mail Address">
-									<button type="submit"></button>
-								</form>
+								</div>
 							</div>
 						</div>
+						<div class="tab-item" id="2">
+							<div class="personal__box">
+								<div class="personal__box-title">About Me: </div>
+								<div class="personal__box-text">
+									<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+										standard
+										dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+										make a
+										type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+								</div>
+								<div class="personal__box-skills">
+									<div class="personal__box-title">Skills: </div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Graphic Design </div>
+											<div class="skills__item-procent">80%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 80%"></span>
+										</div>
+									</div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">WordPress</div>
+											<div class="skills__item-procent">90%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 90%"></span>
+										</div>
+									</div>
 
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Joomla</div>
+											<div class="skills__item-procent">70%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 70%"></span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<div class="tab-item" id="3">
+							<div class="personal__box">
+								<div class="personal__box-title">About Me: </div>
+								<div class="personal__box-text">
+									<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+										standard
+										dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+										make a
+										type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+								</div>
+								<div class="personal__box-skills">
+									<div class="personal__box-title">Skills: </div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Graphic Design </div>
+											<div class="skills__item-procent">80%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 80%"></span>
+										</div>
+									</div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">WordPress</div>
+											<div class="skills__item-procent">90%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 90%"></span>
+										</div>
+									</div>
+
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Joomla</div>
+											<div class="skills__item-procent">70%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 70%"></span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<div class="tab-item" id="4">
+							<div class="personal__box">
+								<div class="personal__box-title">About Me: </div>
+								<div class="personal__box-text">
+									<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+										standard
+										dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+										make a
+										type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+								</div>
+								<div class="personal__box-skills">
+									<div class="personal__box-title">Skills: </div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Graphic Design </div>
+											<div class="skills__item-procent">80%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 80%"></span>
+										</div>
+									</div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">WordPress</div>
+											<div class="skills__item-procent">90%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 90%"></span>
+										</div>
+									</div>
+
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Joomla</div>
+											<div class="skills__item-procent">70%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 70%"></span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<div class="tab-item" id="5">
+							<div class="personal__box">
+								<div class="personal__box-title">About Me: </div>
+								<div class="personal__box-text">
+									<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+										standard
+										dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+										make a
+										type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+								</div>
+								<div class="personal__box-skills">
+									<div class="personal__box-title">Skills: </div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Graphic Design </div>
+											<div class="skills__item-procent">80%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 80%"></span>
+										</div>
+									</div>
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">WordPress</div>
+											<div class="skills__item-procent">90%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 90%"></span>
+										</div>
+									</div>
+
+									<div class="skills__item">
+										<div class="skills__item-head">
+											<div class="skills__item-type">Joomla</div>
+											<div class="skills__item-procent">70%</div>
+										</div>
+										<div class="skills__item-line">
+											<span style="max-width: 70%"></span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="footer__copy">
-					<div class="container">
-						<div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
-							respective owners.</div>
-					</div>
+
 				</div>
 			</div>
-		</footer>
+		</div>
+
+
+
+
+
+
+	</div>
+	<!-- //////////footer//////// -->
+	<footer class="footer">
+		<div class="footer__content">
+			<div class="container">
+				<div class="footer__inner">
+					<div class="footer__col">
+						<div class="footer__col-title">About Company</div>
+						<div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
+							disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
+						<div class="footer__info">PO Box 16122 Collins Street West
+							Victoria 8007 Australia</div>
+						<a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
+					</div>
+
+					<div class="footer__col footer__col-menu">
+						<div class="footer__col-title">Join Our Community</div>
+						<ul class="footer__col-list">
+							<li><a href="#!">Home</a></li>
+							<li><a href="#!">Forums</a></li>
+							<li><a href="#!">Become an Author</a></li>
+							<li><a href="#!">Community Meetups</a></li>
+							<li><a href="#!">Become an Affiliate</a></li>
+						</ul>
+					</div>
+
+					<div class="footer__col footer__col-menu">
+						<div class="footer__col-title">Need Help?</div>
+						<ul class="footer__col-list">
+							<li><a href="#!">Help Center</a></li>
+							<li><a href="#!">Foxtar Market Terms</a></li>
+							<li><a href="#!">Author Terms</a></li>
+							<li><a href="#!">Foxtar Licenses</a></li>
+							<li><a href="#!">Contact Us</a></li>
+						</ul>
+					</div>
+
+					<div class="footer__col">
+						<div class="footer__col-title">Follow Us On</div>
+						<ul class="footer__social-link">
+							<li><a class="link-fb" href="#!"></a></li>
+							<li><a class="link-tw" href="#!"></a></li>
+							<li><a class="link-yt" href="#!"></a></li>
+							<li><a class="link-pin" href="#!"></a></li>
+							<li><a class="link-lin" href="#!"></a></li>
+						</ul>
+						<div class="footer__form">
+							<div class="footer__form-title">Newsletter Sign Up!</div>
+							<form action="">
+								<input type="text" placeholder="E-mail Address">
+								<button type="submit"></button>
+							</form>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			<div class="footer__copy">
+				<div class="container">
+					<div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
+						respective owners.</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
