--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -7,15 +7,15 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Raleway:700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800|Roboto:400,500,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="content">
+	<section class="wrapper">
+		<section class="content">
 			<!-- ////////////header///////////// -->
 			<header class="header">
 				<div class="container">
@@ -191,7 +191,6 @@
 					</div>
 				</div>
 			</header>
-
 			<!-- //////////search//////// -->
 			<section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
 				<div class="container">
@@ -211,50 +210,104 @@
 				</div>
 			</section>
 
-
 			<!-- ////////////breadcrumbs///////////// -->
 			<div class="breadcrumbs">
 				<div class="container">
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#!">Home</a></li>
-							<li><span>About US</span></li>
+							<li><span>Contact US</span></li>
 						</ul>
 					</div>
 				</div>
 			</div>
-			<!-- ////////////about__page///////////// -->
-			<section class="about__page">
-				<div class="about">
-					<div class="container">
-						<div class="about__wrapper">
-							<div class="about__head">To Know Who We Are</div>
-							<div class="about__inner">
-								<div class="about__content">
-									<div class="about__title">What We Do</div>
-									<div class="about__text">when an unknown printer took a galley of type and scrambled it to make a type
-										specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived
-										but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
-										in the 1960s with the releas survived not raseth
-										leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a
-										galley of type and scrambled it to make a type specimen
-										book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into
-										electronic typesetting, remaining essentially unchanged. It was po
-										pularised in the 1960s with the releas survived not rasethleap into electronic typesetting,
-										remaining essentially unchanged. </div>
+			<!-- ////////////withdrawals///////////// -->
+			<section class="withdrawals">
+				<div class="container">
+					<div class="withdrawals__inner">
+						<div class="withdrawals__col">
+							<div class="withdrawals__box">
+								<div class="withdrawals__title">Withdrawals Earnings</div>
+								<div class="withdrawals__content">
+									<form action="#">
+										<div class="withdrawals__line">
+											<label for="">Amount to Withdraw ($2000.00 Maximum)<span>*</span></label>
+											<input type="text" placeholder="Enter the amount you want to withdraw..." required>
+										</div>
+										<div class="withdrawals__line">
+											<label for="">Choose your Withdraw Method<span>*</span></label>
+											<select required>
+												<option value="">Select Your Card</option>
+												<option value="">Select Your Card</option>
+												<option value="">Select Your Card</option>
+											</select>
+										</div>
+										<div class="withdrawals__line">
+											<label for="">Your Account Name<span>*</span></label>
+											<select required>
+												<option value="">Select Your Card</option>
+												<option value="">Select Your Card</option>
+												<option value="">Select Your Card</option>
+											</select>
+										</div>
+
+										<div class="withdrawals__line">
+											<label for="">Confirm Your Password<span>*</span></label>
+											<input type="password" placeholder="Select Your Card" required>
+										</div>
+										<button class="withdrawals__btn" type="submit">Request Withdrawal</button>
+									</form>
 								</div>
-								<div class="about__content">
-									<div class="about__title">Our Mission</div>
-									<div class="about__text">when an unknown printer took a galley of type and scrambled it to make a type
-										specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived
-										but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
-										in the 1960s with the releas survived not raseth
-										leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a
-										galley of type and scrambled it to make a type specimen
-										book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into
-										electronic typesetting, remaining essentially unchanged. It was po
-										pularised in the 1960s with the releas survived not rasethleap into electronic typesetting,
-										remaining essentially unchanged. </div>
+							</div>
+						</div>
+
+						<div class="withdrawals__col">
+							<div class="withdrawals__box">
+								<div class="withdrawals__title">Withdrawal History</div>
+								<div class="withdrawals__content-history">
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $200</div>
+										<div class="withdrawals__content-status status-active">Pending</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $100</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $200</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $100</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $200</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $100</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+									<div class="withdrawals__content-item">
+										<div class="withdrawals__content-date">Dec 26th, 2016  </div>
+										<div class="withdrawals__content-email">Psdboss@paypal.com   </div>
+										<div class="withdrawals__content-cost"> $200</div>
+										<div class="withdrawals__content-status">Paid</div>
+									</div>
+
 								</div>
 							</div>
 						</div>
@@ -263,79 +316,75 @@
 			</section>
 
 
-
-
-
-		</div>
-		<!-- //////////footer//////// -->
-		<footer class="footer">
-			<div class="footer__content">
-				<div class="container">
-					<div class="footer__inner">
-						<div class="footer__col">
-							<div class="footer__col-title">About Company</div>
-							<div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
-								disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
-							<div class="footer__info">PO Box 16122 Collins Street West
-								Victoria 8007 Australia</div>
-							<a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
-						</div>
-
-						<div class="footer__col footer__col-menu">
-							<div class="footer__col-title">Join Our Community</div>
-							<ul class="footer__col-list">
-								<li><a href="#!">Home</a></li>
-								<li><a href="#!">Forums</a></li>
-								<li><a href="#!">Become an Author</a></li>
-								<li><a href="#!">Community Meetups</a></li>
-								<li><a href="#!">Become an Affiliate</a></li>
-							</ul>
-						</div>
-
-						<div class="footer__col footer__col-menu">
-							<div class="footer__col-title">Need Help?</div>
-							<ul class="footer__col-list">
-								<li><a href="#!">Help Center</a></li>
-								<li><a href="#!">Foxtar Market Terms</a></li>
-								<li><a href="#!">Author Terms</a></li>
-								<li><a href="#!">Foxtar Licenses</a></li>
-								<li><a href="#!">Contact Us</a></li>
-							</ul>
-						</div>
-
-						<div class="footer__col">
-							<div class="footer__col-title">Follow Us On</div>
-							<ul class="footer__social-link">
-								<li><a class="link-fb" href="#!"></a></li>
-								<li><a class="link-tw" href="#!"></a></li>
-								<li><a class="link-yt" href="#!"></a></li>
-								<li><a class="link-pin" href="#!"></a></li>
-								<li><a class="link-lin" href="#!"></a></li>
-							</ul>
-							<div class="footer__form">
-								<div class="footer__form-title">Newsletter Sign Up!</div>
-								<form action="">
-									<input type="text" placeholder="E-mail Address">
-									<button type="submit"></button>
-								</form>
-							</div>
-						</div>
-
-					</div>
-				</div>
-				<div class="footer__copy">
+			<!-- //////////footer//////// -->
+			<footer class="footer">
+				<div class="footer__content">
 					<div class="container">
-						<div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
-							respective owners.</div>
+						<div class="footer__inner">
+							<div class="footer__col">
+								<div class="footer__col-title">About Company</div>
+								<div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
+									disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
+								<div class="footer__info">PO Box 16122 Collins Street West
+									Victoria 8007 Australia</div>
+								<a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
+							</div>
+
+							<div class="footer__col footer__col-menu">
+								<div class="footer__col-title">Join Our Community</div>
+								<ul class="footer__col-list">
+									<li><a href="#!">Home</a></li>
+									<li><a href="#!">Forums</a></li>
+									<li><a href="#!">Become an Author</a></li>
+									<li><a href="#!">Community Meetups</a></li>
+									<li><a href="#!">Become an Affiliate</a></li>
+								</ul>
+							</div>
+
+							<div class="footer__col footer__col-menu">
+								<div class="footer__col-title">Need Help?</div>
+								<ul class="footer__col-list">
+									<li><a href="#!">Help Center</a></li>
+									<li><a href="#!">Foxtar Market Terms</a></li>
+									<li><a href="#!">Author Terms</a></li>
+									<li><a href="#!">Foxtar Licenses</a></li>
+									<li><a href="#!">Contact Us</a></li>
+								</ul>
+							</div>
+
+							<div class="footer__col">
+								<div class="footer__col-title">Follow Us On</div>
+								<ul class="footer__social-link">
+									<li><a class="link-fb" href="#!"></a></li>
+									<li><a class="link-tw" href="#!"></a></li>
+									<li><a class="link-yt" href="#!"></a></li>
+									<li><a class="link-pin" href="#!"></a></li>
+									<li><a class="link-lin" href="#!"></a></li>
+								</ul>
+								<div class="footer__form">
+									<div class="footer__form-title">Newsletter Sign Up!</div>
+									<form action="">
+										<input type="text" placeholder="E-mail Address">
+										<button type="submit"></button>
+									</form>
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<div class="footer__copy">
+						<div class="container">
+							<div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
+								respective owners.</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
-	</div>
+			</footer>
+		</section>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
-	<script src="js/main.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="js/libs.min.js"></script>
+		<script src="js/main.js"></script>
 </body>
 
 </html>
